--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,6 +26,11 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+        <repository>
+            <id>spring-milestone</id>
+            <name>Spring Maven Milestone Repository</name>
+            <url>http://repo.springsource.org/libs-milestone</url>
+        </repository>
 	</repositories>
 
 	<properties>
@@ -73,7 +78,7 @@
 		<querydsl.version>2.8.0</querydsl.version>
 		<slf4j.version>1.7.2</slf4j.version>
 		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
-		<spring.data.mongo.version>1.2.1.RELEASE</spring.data.mongo.version>
+		<spring.data.mongo.version>1.3.0.RC1</spring.data.mongo.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
