--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -45,6 +45,7 @@
 		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<commons-collections.version>3.2</commons-collections.version>
 		<commons-http-client.version>3.0.1</commons-http-client.version>
+        <commons-http-components-client.version>4.2.5</commons-http-components-client.version>
         <commons-email.version>1.3.1</commons-email.version>
 		<commons-io.version>1.4</commons-io.version>
 		<commons-lang.version>2.3</commons-lang.version>
@@ -191,7 +192,13 @@
 				<version>${commons-http-client.version}</version>
 				<type>jar</type>
 			</dependency>
-			<dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${commons-http-components-client.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${commons-io.version}</version>
