--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -78,8 +78,8 @@
 		<mysql.connector.version>5.1.25</mysql.connector.version>
 		<querydsl.version>2.8.0</querydsl.version>
 		<slf4j.version>1.7.2</slf4j.version>
-		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
-		<spring.data.mongo.version>1.3.0.RC1</spring.data.mongo.version>
+		<spring.data.commons.version>1.6.1.RELEASE</spring.data.commons.version>
+		<spring.data.mongo.version>1.3.1.RELEASE</spring.data.mongo.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
