--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -23,6 +23,7 @@ process_business_key_limit   = Alias provided must be 140 characters or shorter
 process_change_key_duplicate = Cannot rename process from %s to %s because a process with the new key already exists
 process_does_not_exist 		 = Process with key %s does not exist
 process_is_misconfigured     = Process is not correctly configured
+process_not_deployed         = Process has not yet been deployed
 
 request_does_not_match       = Form cannot be submitted to this URL
 request_id_required          = A valid request id must be provided
