--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,12 +1,12 @@
 active_task_required         = This action is only permitted when you have been assigned a task and it remains active
 
 attachment_could_not_be_saved = File cannot be stored
-attachment_is_too_large      = File cannot be larger than %s bytes!
-attachment_does_not_exist    = Attachment with key %s does not exist
+attachment_is_too_large      = File cannot be larger than {0} bytes!
+attachment_does_not_exist    = Attachment with key {0} does not exist
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
 
-encryption_error             = Unable to correctly store value for %s
+encryption_error             = Unable to correctly store value for {0}
 
 form_access_forbidden        = Access denied
 
@@ -16,7 +16,7 @@ instance_does_not_exist      = No workflow could be found for that identifier
 insufficient_permission      = You do not have the necessary permissions to complete this action
 
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
-interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
+interaction_invalid 	 	 = Interaction with key {0} does not exist or does not belong to the process definition key provided
 
 invalid_assignment           = Invalid user provided
 invalid_process_status       = Unable to update process status or process is already in that state
@@ -24,8 +24,8 @@ invalid_process_status       = Unable to update process status or process is alr
 not_editable                 = This item cannot be edited or deleted
 
 process_business_key_limit   = Alias provided must be 140 characters or shorter
-process_change_key_duplicate = Cannot rename process from %s to %s because a process with the new key already exists
-process_does_not_exist 		 = Process with key %s does not exist
+process_change_key_duplicate = Cannot rename process from {0} to {1} because a process with the new key already exists
+process_does_not_exist 		 = Process with key {0} does not exist
 process_is_misconfigured     = Process is not correctly configured
 process_not_deployed         = Process has not yet been deployed
 
