--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -11,6 +11,7 @@ application.name = Piecework
 
 authentication.type = NONE
 authentication.testuser = rod
+authentication.testuser.displayName = Roderick Testuser
 authentication.testcredentials = koala
 
 base.application.uri = /piecework/secure
